bk_ida/gccida/c0/emit_store_flag_force
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_store_flag_force/src/expmed.c:5129:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code code, 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_store_flag_force/src/expmed.c:5132:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode, 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_store_flag_force/src/expmed.c:5145:26: error: use of undeclared identifier 'machine_mode'
targeta = gen_reg_rtx( ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)target)); 
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_store_flag_force/src/expmed.c:5145:41: error: expected expression
targeta = gen_reg_rtx( ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)target)); 
                                        ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_store_flag_force/src/obj/expmed.o] Error 1
